[package]
name = "pvz-imgui-rs"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
name = "a_pvz_imgui_rs"
[dependencies]
copypasta = "0.8"
glium = { version = "0.34.0", default-features = true }
imgui = "0.12.0"
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
windows = { version = "0.58.0", features = ["Win32",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp"] }